--- a/purchase_indonesia/reports/report_purchase_quotation.xml
+++ b/purchase_indonesia/reports/report_purchase_quotation.xml
@@ -8,27 +8,29 @@
             		<t t-call="report.internal_layout">
 						<div class="page" style="font-family: times; background-color:white; color:black;">
 		              		<!-- Header -->
-		              		<div class="row" style="text-align:left;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		                       		<b>PT 	: <span t-field="o.companys_id.name"/> </b>
 								</div>
 							</div>
-							<div class="row" style="text-align:right;">
+							<div class="row" style="text-align:right;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		                       		<b>Reff PP	: <span t-field="o.source_purchase_request"/> </b>
 								</div>
-							</div>	
-							<div class="row" style="text-align:center; font-size:20pt;">
-		              			<div class="col-xs-12" >
+							</div>
+							<br/>	
+							<div class="row" style="text-align:center; font-size:16pt;">
+		              			<div style ="border-top:2px solid;border-bottom:2px solid;" class="col-xs-12" >
 		                       		<b>PERMINTAAN PENAWARAN (QUOTATION)</b>
 								</div>
 							</div>
-							<div class="row" style="text-align:left;">
+							<br/>
+							<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		                       		<b>Nama Vendor	: <span t-field="o.partner_id.name"/></b>
 								</div>
 							</div>
-							<div class="row" style="text-align:right;">
+							<div class="row" style="text-align:right;font-size:10pt;">
 		              			<div class="col-xs-12" >
 		                       		<b>Date	: <span t-field="o.date_order" t-field-options="{&quot;format&quot;: &quot;dd MMMM yyyy&quot;}"/> </b>
 								</div>
@@ -38,32 +40,32 @@
 		           			<t t-set="idx" t-value="0"/>
 		           			
 		           			<!-- Detail Header -->
-		           			<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		           			<div class="row" style="text-align:left;font-size:10pt;">
+		              			<table style="border: 1px solid;padding:10px;" width="100%">
 		              			    <thead>
 			                            <tr class="label_table_header">
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      No
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Nama Barang/Jasa
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Keterangan Barang/Jasa
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Qty
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Satuan
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Harga Satuan
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Jumlah
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Status Barang/Jasa <br></br>(Ready/Indent)
 										    </th>
 										</tr>
@@ -72,144 +74,144 @@
 										<t t-foreach="o.order_line" t-as="l">
 											<t t-set="idx" t-value="idx+1"/>   	
 											<tr>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 											      	<span t-esc="idx"/>
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" valign="center">
 											      	<span t-field="l.product_id.name"/>
 											    </td>
-											    <td>
-											      	<span t-field="l.product_id.name"/>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
+											      	&#160;
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="right" valign="center">
 											        <span t-field="l.product_qty" />
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 											      	<span t-field="l.product_uom"/>
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="right" valign="center">
 											      	<span t-field="l.price_unit"/>
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="right" valign="center">
 											      	<span t-field="l.price_subtotal"/>
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" valign="center">
 											      	<span t-field="l.term_of_goods"/>
 											    </td>
 											</tr>
 										</t>
 										<tr>
-										    <td colspan="5">
+										    <td colspan="5" style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										      	Sub Total
 										    </td>
-										    <td colspan="2">
+										    <td colspan="2" style="border:1px solid;height:25px;font-size:10pt;" valign="center" align="right">
 										      	<span t-field="o.amount_untaxed"/>
 										    </td>
-										    <td>
+										    <td style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										     	&#160; 	
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="5">
+										    <td colspan="5" style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										      	Discount
 										    </td>
-										    <td colspan="2">
+										    <td colspan="2" style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										     	&#160; 	
 										    </td>
-										    <td>
+										    <td style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										     	&#160; 	
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="5">
+										    <td colspan="5" style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										      	Tax
 										    </td>
-										    <td colspan="2">
+										    <td colspan="2" style="border:1px solid;height:25px;font-size:10pt;" valign="center" align="right">
 										      	<span t-field="o.amount_tax"/>
 										    </td>
-										    <td>
+										    <td style="border:1px solid;height:25px;font-size:10pt;" valign="center">
 										     	&#160; 	
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="5" style="text-align: center;">
+										    <td colspan="5" style="border:1px solid;border-bottom:2px solid;text-align:left;height:25px;font-size:10pt;"> 
 										      	GRAN TOTAL
 										    </td>
-										    <td colspan="2">
+										    <td colspan="2" style="border:1px solid;border-bottom:2px solid;height:25px;font-size:10pt;" valign="center" align="right">
 										      	<span t-field="o.amount_total"/>
 										    </td>
-										    <td>
+										    <td style="border:1px solid;height:25px;border-bottom:2px solid;font-size:10pt;" valign="center">
 										     	&#160; 	
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="5" class="noborder">
+										    <td colspan="5" class="noborder" style="border-left:1px solid;border-right:1px solid;height:25px;font-size:10pt;" valign="center">
 										      	Pembayaran&#160;:
 										    </td>
-										    <td class="noborder" colspan="2">
+										    <td class="noborder" colspan="2" style="border-right:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 										      	<span t-field="o.payment_term_id"/>
 										    </td>
-										    <td class="noborder">
+										    <td class="noborder" style="border-right:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 										     	&#160; 	
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="5" class="noborder">
+										    <td colspan="5" class="noborder" style="border-left:1px solid;border-right:1px solid;border-bottom:2px solid;height:25px;font-size:10pt;" valign="center">
 										      	Alamat Pengiriman&#160;:
 										    </td>
-										    <td class="noborder" colspan="2">
+										    <td class="noborder" colspan="2" style="border-right:1px solid;border-bottom:2px solid;height:25px;font-size:10pt;" align="center" valign="center">
 										      	Kantor Palma Group&#160;/&#160;Site Gorontalo
 										    </td>
-										    <td class="noborder">
+										    <td class="noborder" style="border-right:1px solid;border-bottom:2px solid;height:25px;font-size:10pt;" align="center" valign="center">
 										     	&#160; 	
 										    </td>
 										</tr>
 									</tbody>			
 								</table>
-								<table width="100%">
+								<table width="100%" style="border:1px solid;">
 		                            <tr>
-		                          		<td class="noborder">
+		                          		<td class="noborder" style="height:25px;font-size:10pt;" valign="center">
 		                          		    Confirmed By&#160;:&#160;<span t-field="o.confirmed_by_person"/>
 		                          		</td>
-                                        <td class="noborder">
+                                        <td class="noborder" style="height:25px;font-size:10pt;" valign="center">
                                         	<span t-field="o.confirmed_by"/>
                                         </td>
-                                        <td class="noborder">
+                                        <td class="noborder" style="height:25px;font-size:10pt;" valign="center">
                                         	<span t-field="o.confirmed_by_value"/>
                                         </td>
-                                        <td class="noborder">
+                                        <td class="noborder" style="border-bottom:1px solid;height:25px;font-size:10pt;" valign="center">
                                         	&#160;
                                         </td>
 		                          	</tr>
 		                       	</table>   	
-								<table width="100%">
+								<table width="100%" style="border:1px solid;">
 		                            <tr>
-		                          		<td class="noborder" width="50%">
+		                          		<td class="noborder" width="50%" style="height:25px;font-size:10pt;" valign="center">
 		                          		    Vendor	:
 		                          		</td>
-                                        <td class="noborder">
+                                        <td class="noborder" style="height:25px;font-size:10pt;" valign="center">
                                         	&#160;
                                         </td>
-                                        <td class="noborder">
+                                        <td class="noborder" style="height:25px;font-size:10pt;" valign="center">
                                         	&#160;
                                         </td>
-		                          		<td class="noborder" style="text-align: left;">
+		                          		<td class="noborder" style="height:25px;font-size:10pt;text-align: left;">
 		                          		    Name ,
 		                          		</td>
 		                          	</tr>
                                     <tr>
-                                        <td colspan="4" class="noborder">
+                                        <td colspan="4" class="noborder" style="height:25px;font-size:10pt;" >
                                         	&#160;
                                         </td>
 		                          	</tr> 
 								    <tr>
-		                          		<td colspan="2" class="noborder">
+		                          		<td colspan="2" class="noborder" style="height:25px;font-size:10pt;" >
 		                          		    1.
 		                          		</td>
-		                          		<td class="noborder" style="text-align: left;">
+		                          		<td class="noborder" style="text-align:left;height:25px;font-size:10pt;" >
 		                          		    Procurement &amp; Log Staff
 		                          		</td>
-                                        <td class="noborder" style="text-align: left;">
+                                        <td class="noborder" style="text-align:left;height:25px;font-size:10pt;">
 		                          		    ___________________
 		                          		</td>
 		                          	</tr>
@@ -219,29 +221,29 @@
                                         </td>
 		                          	</tr> 
 		                          	<tr>
-		                          		<td colspan="2" class="noborder" width="25%">
+		                          		<td colspan="2" class="noborder" width="25%" style="height:25px;font-size:10pt;">
 		                          		    2.______________________________________
 		                          		</td>
-		                          		<td class="noborder" style="text-align: left;">
+		                          		<td class="noborder" style="text-align:left;height:25px;font-size:10pt;">
 		                          		    Procurement &amp; Log Dept. Head
 		                          		</td>
-                                        <td class="noborder" style="text-align: left;">
+                                        <td class="noborder" style="text-align:left;height:25px;font-size:10pt;">
 		                          		    ___________________
 		                          		</td>
 		                          	</tr>
                                     <tr>
-                                        <td colspan="4" class="noborder">
+                                        <td colspan="4" class="noborder" style="height:25px;font-size:10pt;">
                                         	&#160;&#160;&#160;Signature
                                         </td>
 		                          	</tr> 
 		                          	<tr>
-		                          		<td colspan="2" class="noborder">
+		                          		<td colspan="2" class="noborder" style="height:25px;font-size:10pt;">
 		                          		    3.
 		                          		</td>
-		                          		<td class="noborder" style="text-align: left;">
+		                          		<td class="noborder" style="text-align:left;height:25px;font-size:10pt;">
 		                          		    Procurement &amp; Log Div. Head
 		                          		</td>
-                                        <td class="noborder" style="text-align: left;">
+                                        <td class="noborder" style="text-align:left;height:25px;font-size:10pt;;">
 		                          		    ___________________
 		                          		</td>
 		                          	</tr>
