--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -8,10 +8,10 @@
             		<t t-call="report.internal_layout">
 						<div class="page" style="font-family: times; background-color:white; color:black;">
 		              		<!-- Header -->
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-6" >
 		                       		<table class="noborder">
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <b>PT</b>
 		                       		        </td>
@@ -19,7 +19,7 @@
 		                       		            <b>: <span t-field="o.company_id.name"/></b>
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <b>Lokasi</b>
 		                       		        </td>
@@ -29,9 +29,9 @@
 		                       		    </tr>
 		                       		</table>
 		                      	</div>
-		                      	<div class="col-xs-6" >
+		                      	<div style="text-align:left;font-size:10pt;" class="col-xs-6" >
 		                       		<table class="noborder">
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <t t-if="o.purchase_id.request_id.type_product == 'service' ">
 													<b>SRN No.</b>
@@ -44,7 +44,7 @@
 		                       		            <b>: <span t-field="o.complete_name_picking"/></b>
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <b>Tanggal</b>
 		                       		        </td>
@@ -55,12 +55,9 @@
 		                       		</table>
 		                      	</div>
 		                  	</div>
-		                  	
 		                  	<br></br>
-							<br></br>
-							
-							<div class="row" style="text-align:center; font-size:20pt;">
-		              			<div class="col-xs-12" >
+							<div class="row" style="text-align:center; font-size:16pt;">
+		              			<div style ="border-top:2px solid;border-bottom:2px solid;" class="col-xs-12" >
 		                       		<t t-if="o.purchase_id.request_id.type_product == 'service' ">
 										<b>SERVICES RECEIVED NOTE (SRN)</b>
 									</t>
@@ -69,14 +66,11 @@
 									</t>
 								</div>
 							</div>
-							
 							<br></br>
-							<br></br>
-							
-							<div class="row" style="text-align:left;font-size:14pt;">
+							<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-6" >
 		                       		<table class="noborder">
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <b>Penerimaan dari </b>
 		                       		        </td>
@@ -88,12 +82,7 @@
 		                      	</div>
 		                      	<div class="col-xs-6" >
 		                       		<table class="noborder">
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="25%" colspan="2">
-		                       		            <b>Referensi :</b>
-		                       		        </td>
-		                       		    </tr>
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <b>PP No.</b>
 		                       		        </td>
@@ -101,7 +90,7 @@
 		                       		            <b>: <span t-field="o.pr_source"/></b>
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <t t-if="o.purchase_id.request_id.type_product == 'service' ">
 													<b>SPO No.</b>
@@ -114,7 +103,7 @@
 		                       		            <b>: <span t-field="o.purchase_id.complete_name"/></b>
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
+		                       		    <tr>
 		                       		        <td class="noborder" width="25%">
 		                       		            <b>DO No.</b>
 		                       		        </td>
@@ -126,35 +115,35 @@
 		                      	</div>
 		                  	</div>
 							<br></br>
-							<br></br>
+							
 							<!-- Variabel -->
 							<t t-set="idx" t-value="0"/>
 							<t t-set="delta" t-value="0"/>
 		           			
 		              		<!-- Detail Header -->
-		              		<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
+		              			<table style="border: 1px solid;padding:10px;" width="100%">
 		              			    <thead>
 			                            <tr class="label_table_header">
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      No
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Kode Barang/Jasa
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Nama Barang/Jasa
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Dikirim
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Diterima
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Satuan
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:2px solid;height:30px;text-align:center;font-size:10pt;" valign="center">
 										      Selisih/Catatan
 										    </th>
 										</tr>
@@ -164,25 +153,25 @@
 											<t t-set="idx" t-value="idx+1"/>
 											<t t-set="delta" t-value="l.product_qty-l.qty_done"/>
 											<tr>
-											   	<td>
+											   	<td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 													<span t-esc="idx"/>
 												</td> 	
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" valign="center">
 											      	<span t-field="l.product_id.default_code"/>
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" valign="center">
 											      	<span t-field="l.product_id.name"/>
 											    </td>
-											    <td align="center">
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 											      	<span t-field="l.product_qty"/>
 											    </td>
-											    <td align="center">
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 											      	<span t-field="l.qty_done"/>
 											    </td>
-											    <td align="center">
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 											      	<span t-field="l.product_id.uom_id"/>	    
 											    </td>
-											    <td align="center">
+											    <td style="border-right:1px solid;border-bottom:1px solid;height:25px;font-size:10pt;" align="center" valign="center">
 											      	<span t-esc="delta"/>
 											    </td>
 											</tr>
@@ -194,7 +183,7 @@
 		              		<br></br>
 							<br></br>
 		              		
-		              		<div class="row">
+		              		<div class="row" style="font-size:10pt;">
 		                        <div class="col-xs-12">
 		                            <table width="100%" class="noborder">
 			                        	<tr>
@@ -212,54 +201,46 @@
 							<br></br>
 		              		
 							<!-- Tanda Tangan -->
-		                    <div class="row">
+		                    <div class="row" style="font-size:10pt;">
 		                        <div class="col-xs-12">	
 			                        <table width="100%" class="noborder">
 			                            <tr>
-			                                <td class="noborder">
+			                                <td class="noborder" style="font-size:10pt;">
 			                                    Dikirim Oleh,
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
 			                                    <br></br>
 												<u><span t-field="o.shipper_by"/></u>
 												<br></br>
-			                                    Tgl.
-
+			                                    <span t-field="o.create_date"/>
 			                                </td>
-			                                <td class="noborder">
+			                                <td class="noborder" style="font-size:10pt;">
 			                                    Diterima Oleh,
 			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <u><span t-field="o.requested_by"/></u>
-			                                    <br></br>
-			                                    Tgl.
+			                                    <t t-foreach="o.message_ids" t-as="mids">
+													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+														<t t-if="mids_tracking.field == 'assign_to' and not mids_tracking.new_value_char">
+															<u>
+																<span t-field="mids.author_id"/>&#160;
+															</u>
+															<br/>
+															<span t-field="mids.date"/>&#160;
+														</t>
+													</t>
+												</t>
 			                                </td>
-			                                <td class="noborder">
+			                                <td class="noborder" style="font-size:10pt;">
 			                                    Disetujui Oleh,
 			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <u><span t-field="o.assigned_to"/></u>
-			                                    <br></br>
-			                                    Tgl.
-			                                </td>
-			                                <td class="noborder">
-			                                    Diinput Oleh,
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    <br></br>
-			                                    ____________________
-			                                    <br></br>
-			                                    Tgl.
+			                                    <t t-foreach="o.message_ids" t-as="mids">
+													<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
+														<t t-if="mids_tracking.field == 'state' and mids_tracking.new_value_char == 'Done'">
+															<u>
+																<span t-field="mids.author_id"/>&#160;
+															</u>
+															<br/>
+															<span t-field="mids.date"/>&#160;
+														</t>
+													</t>
+												</t>
 			                                </td>
 			                            </tr>
 			                     	</table>
