--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -16,7 +16,7 @@
 		                       		            <b>PT</b>
 		                       		        </td>
 		                       		        <td class="noborder">
-		                       		            <b>: <span t-field="o.company_id.name"/></b>
+		                       		            <b>: <span t-field="o.companys_id.name"/></b>
 		                       		        </td>
 		                       		    </tr>
 		                       		    <tr>
